Fixed section spacing

--- a/week7/css/responsive.css
+++ b/week7/css/responsive.css
@@ -188,7 +188,7 @@
 
 	section#graphicdesign {
 		padding-left: 0;
-		margin: 8% auto;
+		margin: 12% auto;
 		padding-bottom: 3em;
 	}
 
@@ -244,7 +244,7 @@
   		border: .1em rgba(255,172,34,1) solid;
 	}
 	#photo-overlay {
-		padding: 5.5em 4.5em 9em 4.5em;
+		padding: 7.5em 4.5em 11em 4.5em;
 	}
 
 	/* // About // */
@@ -343,7 +343,7 @@
 
 	section#graphicdesign {
 		padding-left: 0;
-		margin: 8% auto;
+		margin: 12% auto;
 		padding-bottom: 3em;
 	}
 
@@ -403,7 +403,7 @@
   		border: .1em rgba(255,172,34,1) solid;
 	}
 	#photo-overlay {
-		padding: 5.5em 4.5em 9em 4.5em;
+		padding: 7.5em 4.5em 11em 4.5em;
 	}
 
 	/* // About // */
